# osclive

./: LICENSE  OSCClient.py  OSCServer.py  README.md  SLRemote.py  StudioLive.py  config.py  misc.py  osc.py  osclive-config-example.yaml  pyproject.toml  transport.py
osclive/: __main__.py  handler.py
osclive/osc/: __init__.py  server.py
osclive/studiolive/: SLBackend.py  SLRaw1394Backend.py  SLRemote.py  SLUcBackend.py  StudioLive1602.py  __init__.py  backend.py  raw.py  raw1394backend.py  rawbackend.py  remote.py  studiolive1602.py  uc.py  ucbackend.py
tools/: topyg.py  touchoscgen.py
