[project]
name = "osclive"
description = "OSC server for PreSonus StudioLive"
version = "0.1.0"
authors = [
    { name = "Martin Spinler", email = "martin.spinler@gmail.com" }
]
dependencies = [
    "python-osc",
    "netifaces",
    "zeroconf",
]

[project.optional-dependencies]
dev = [
    "raw1394@git+https://github.com/martinspinler/pyraw1394.git",
    "pyyaml",
]

[project.scripts]
osclive = "osclive.__main__:main"
