[project]
name = "osclive"
description = "OSC server for PreSonus StudioLive"
version = "0.3.0"
authors = [
    { name = "Martin Spinler", email = "martin.spinler@gmail.com" }
]
dependencies = [
    "python-osc",
    "netifaces",
    "zeroconf",
]

[project.optional-dependencies]
dev = [
    "raw1394@git+https://github.com/martinspinler/pyraw1394.git",
    "pyyaml",
    "python-rtmidi",
    "mido",
]

[project.scripts]
osclive = "osclive.__main__:main"

[[tool.mypy.overrides]]
module = "mido,raw1394"
ignore_missing_imports = true
